--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs-react": "^2.4.6",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
